add zoom on click for images and made responsive

--- a/about_page/about.html
+++ b/about_page/about.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <script src="https://kit.fontawesome.com/0a7b0535a4.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/svg+xml" href="images/newlogo.svg">
+  <link rel="icon" type="image/svg+xml" href="../images/newlogo.svg">
 </head>
 
 <body>
