--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -10,6 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<script src="https://kit.fontawesome.com/0a7b0535a4.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/svg+xml" href="../images/newlogo.svg">
 </head>
 
 <body>
@@ -34,34 +35,49 @@
 	<div id="gallery-main">
 		<h2>Regulars</h2>
 		<div class="grid-container">
-			<div class="grid-items"><img src="gallery_images/regulars-1.png" alt="chocloate image"></div>
-			<div class="grid-items"><img src="gallery_images/regulars-2.jpg" alt="chocloate image"></div>
-			<div class="grid-items"><img src="gallery_images/cookie_cream.png" alt="chocloate image"></div>
-			<div class="grid-items"><img src="gallery_images/regulars-1.1.jpg" alt="chocloate image"></div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img src="gallery_images/regulars-1.png"
+						alt="chocloate image"> </label> </div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img src="gallery_images/regulars-2.jpg"
+						alt="chocloate image"> </label> </div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img
+						src="gallery_images/cookie_cream.png" alt="chocloate image"> </label> </div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img
+						src="gallery_images/regulars-1.1.jpg" alt="chocloate image"> </label> </div> <br>
 		</div>
 
 		<h2>Specials</h2>
 		<div class="grid-container">
-			<div class="grid-items"><img src="gallery_images/oreo_sandwich.jpg" alt="chocloate image"></div>
-			<div class="grid-items"><img src="gallery_images/choco_dates.jpg" alt="chocloate image"></div>
-			<div class="grid-items"><img src="gallery_images/biscuit_disk.jpg" alt="chocloate image"></div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img
+						src="gallery_images/oreo_sandwich.jpg" alt="chocloate image"> </label> </div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img
+						src="gallery_images/choco_dates.jpg" alt="chocloate image"> </label> </div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img
+						src="gallery_images/biscuit_disk.jpg" alt="chocloate image"> </label> </div> <br>
 		</div>
 
 		<h2>Chocolate Bars</h2>
 		<div class="grid-container">
-			<div class="grid-items"><img src="gallery_images/chocolate_bar-1.jpg" alt="chocloate image"></div>
-			<div class="grid-items"><img src="gallery_images/chocolate_bar-2.jpg" alt="chocloate image"></div>
-			<div class="grid-items"><img src="gallery_images/gala-1.jpg" alt="chocloate image"></div>
-			<div class="grid-items"><img src="gallery_images/gala.jpg" alt="chocloate image"></div>
+			<div class="grid-items click-zoom"><label><input type="checkbox"> <img
+						src="gallery_images/chocolate_bar-1.jpg" alt="chocloate image"></label></div>
+			<div class="grid-items click-zoom"><label><input type="checkbox"> <img
+						src="gallery_images/chocolate_bar-2.jpg" alt="chocloate image"></label></div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img src="gallery_images/gala-1.jpg"
+						alt="chocloate image"> </label> </div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img src="gallery_images/gala.jpg"
+						alt="chocloate image"> </label> </div> <br>
 		</div>
 
 		<h2>Pinatas</h2>
 		<div class="grid-container">
-			<div class="grid-items"><img src="gallery_images/pinata_brown.jpg" alt="chocloate image"></div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img
+						src="gallery_images/pinata_brown.jpg" alt="chocloate image"> </label> </div>
 			<!-- <div class="grid-items"><img src="gallery_images/pinata_white.png" alt="chocolate image"></div> -->
-			<div class="grid-items"><img src="gallery_images/pinata_heart_blue.jpg" alt="pinata image"></div>
-			<div class="grid-items"><img src="gallery_images/pinata_heart_pink.jpg" alt="chocolate image"></div>
-			<div class="grid-items"><img src="gallery_images/pinata_heart_white.jpg" alt="chocolate image"></div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img
+						src="gallery_images/pinata_heart_blue.jpg" alt="pinata image"> </label> </div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img
+						src="gallery_images/pinata_heart_pink.jpg" alt="chocolate image"> </label> </div>
+			<div class="grid-items click-zoom"> <label> <input type="checkbox"> <img
+						src="gallery_images/pinata_heart_white.jpg" alt="chocolate image"> </label> </div> <br>
 		</div>
 	</div>
 
